# pytest-json-report-wip

./: pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml
pytest_jsonreport/: plugin.py
tests/: conftest.py  test_jsonreport.py
